--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Paul -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Una boda en las bahamas con madea -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula886.html">
+    <img src="https://image.tmdb.org/t/p/original/brXUEyuY25r3ksIt8poDGjNyWNt.jpg" alt="Una boda en las bahamas con madea" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Una boda en las bahamas con madea</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Paul -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula882.html">
     <img src="https://image.tmdb.org/t/p/original/e57pNjhWbRos9BTvgeUYUzB8VfO.jpg" alt="Paul" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
