--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dos Tontos Muy Tontos -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Una Pareja de Idiotas 2 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula890.html">
+    <img src="https://image.tmdb.org/t/p/original/zsm4tAiPire8ZlmosySZqywxCvY.jpg" alt="Una Pareja de Idiotas 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Una Pareja de Idiotas 2</div>
+  <div class="text-xs text-white/70">2014</div>
+</article><!-- Dos Tontos Muy Tontos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula889.html">
     <img src="https://image.tmdb.org/t/p/original/oJSYzIRoJLqNcMMgy8ErCJjSJf9.jpg" alt="Dos Tontos Muy Tontos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
