--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El regreso a casa de Madea -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Rush: Pasion y Gloria -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula892.html">
+    <img src="https://image.tmdb.org/t/p/original/AqnOb3S6C9yttv9b2ZmrdZALmxR.jpg" alt="Rush: Pasión y Gloria" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Rush: Pasión y Gloria</div>
+  <div class="text-xs text-white/70">2013</div>
+</article><!-- El regreso a casa de Madea -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula887.html">
     <img src="https://image.tmdb.org/t/p/original/a98l9jruh8MuquTe6hrd8vSieN1.jpg" alt="El regreso a casa de Madea" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
