--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Rush: Pasion y Gloria -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Demon Slayer: Mugen Train La pelicula -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula893.html">
+    <img src="https://image.tmdb.org/t/p/original/8t29MfbEkEZixjVbjRkqI5NyFR4.jpg" alt="Demon Slayer: Mugen Train La película" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Demon Slayer: Mugen Train La película</div>
+  <div class="text-xs text-white/70">2020</div>
+</article><!-- Rush: Pasion y Gloria -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula892.html">
     <img src="https://image.tmdb.org/t/p/original/AqnOb3S6C9yttv9b2ZmrdZALmxR.jpg" alt="Rush: Pasión y Gloria" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
