--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un detective suelto en Hollywood II -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un detective suelto en Hollywood: Axel F. -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula906.html">
+    <img src="https://image.tmdb.org/t/p/original/3f28IXwRBEZjR75Pm4jCiBw3HZc.jpg" alt="Un detective suelto en Hollywood: Axel F." class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Un detective suelto en Hollywood: Axel F.</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Un detective suelto en Hollywood II -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula905.html">
     <img src="https://image.tmdb.org/t/p/original/19fU9cD8nBp3riUgKZi6nLSMO88.jpg" alt="Un detective suelto en Hollywood II" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
