--- a/Plataforma/paramount/index.html
+++ b/Plataforma/paramount/index.html
@@ -219,7 +219,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un detective suelto en Hollywood II -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un detective suelto en Hollywood III -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula907.html">
+    <img src="https://image.tmdb.org/t/p/original/szhFPC5FXN6YHGMqWuqaGR7EKk8.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Un detective suelto en Hollywood III</div>
+  <div class="text-xs text-white/70">1994</div>
+</article><!-- Un detective suelto en Hollywood II -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula905.html">
     <img src="https://image.tmdb.org/t/p/original/19fU9cD8nBp3riUgKZi6nLSMO88.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
