--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un detective suelto en Hollywood: Axel F. -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un detective suelto en Hollywood III -->
+<li>
+  <a href="../Peliculas/pelicula907.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/szhFPC5FXN6YHGMqWuqaGR7EKk8.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Un detective suelto en Hollywood III 1994</span>
+    <span class="hidden">El detective de Detroit Axel Foley emplea todo su coraje para perseguir a unos despiadados asesinos con la ayuda de sus viejos compañeros Serge y Billy Rosewood. Las investigaciones lo conducen al popular parque temático de Los Ángeles WonderWorld. Allí, repentinamente, Axel se convierte en la nueva atracción del lugar, bien sea quedándose colgado de una araña gigante para rescatar a un niño o disfrazándose de Okey Dokey, un enorme elefante azul.</span>
+  </a>
+</li>
+<!--FIN--><!-- Un detective suelto en Hollywood: Axel F. -->
 <li>
   <a href="../Peliculas/pelicula906.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
