--- a/Plataforma/disney/index.html
+++ b/Plataforma/disney/index.html
@@ -190,7 +190,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Tron: El Legado -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Elementos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula908.html">
+    <img src="https://image.tmdb.org/t/p/original/d79DeKDCgFOM23O8Dr6MELZVooY.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Elementos</div>
+  <div class="text-xs text-white/70">2023</div>
+</article><!-- Tron: El Legado -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula859.html">
     <img src="https://image.tmdb.org/t/p/original/m3tkTgatN1IuwKGAFnsiLakRQLh.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
