--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Elementos -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Plan familiar -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula909.html">
+    <img src="https://image.tmdb.org/t/p/original/mBiylEUJgWikljJJNB61u7dDPON.jpg" alt="Plan familiar" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Plan familiar</div>
+  <div class="text-xs text-white/70">2023</div>
+</article><!-- Elementos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula908.html">
     <img src="https://image.tmdb.org/t/p/original/d79DeKDCgFOM23O8Dr6MELZVooY.jpg" alt="Elementos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
