--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- The Alto Knights: Mafia y poder -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Rocky V -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula911.html">
+    <img src="https://image.tmdb.org/t/p/original/tevHaVxtrMTaUi8f3YjLWYSSY8A.jpg" alt="Rocky V" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Rocky V</div>
+  <div class="text-xs text-white/70">1990</div>
+</article><!-- The Alto Knights: Mafia y poder -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula903.html">
     <img src="https://image.tmdb.org/t/p/original/fZrMqok5ZQH82R1YqBu3LcG26ON.jpg" alt="The Alto Knights: Mafia y poder" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
