--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Echo Valley -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Gravedad cero -->
+<li>
+  <a href="../Peliculas/pelicula914.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/4rOMi0FAfFwLfS1qsoklDAejI70.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Gravedad cero 2025</span>
+    <span class="hidden">En el futuro próximo, la humanidad explora con éxito el espacio: ahora una enorme estación Delta se encuentra en la órbita terrestre. Maksim Bortnikov es uno de los miembros del equipo de reparación de la estación. Una inesperada catástrofe causada por una tormenta de protones lo separa del resto, y se queda solo en el espacio exterior.</span>
+  </a>
+</li>
+<!--FIN--><!-- Echo Valley -->
 <li>
   <a href="../Peliculas/pelicula913.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
