--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Las guerreras k-pop -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dora y la Busqueda del Sol Dorado -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula915.html">
+    <img src="https://image.tmdb.org/t/p/original/sVLSOnGfNXj7VVGBgOz5cNa0lDz.jpg" alt="Dora y la Búsqueda del Sol Dorado" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Dora y la Búsqueda del Sol Dorado</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Las guerreras k-pop -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula891.html">
     <img src="https://image.tmdb.org/t/p/original/swQRKmW7RLhncPYHvM0RHz8b7bT.jpg" alt="Las guerreras k-pop" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
