--- a/Plataforma/nickelodeon/index.html
+++ b/Plataforma/nickelodeon/index.html
@@ -219,7 +219,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¡Oye, Arnold! -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dora y la Busqueda del Sol Dorado -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula915.html">
+    <img src="https://image.tmdb.org/t/p/original/sVLSOnGfNXj7VVGBgOz5cNa0lDz.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Dora y la Búsqueda del Sol Dorado</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- ¡Oye, Arnold! -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie73.html">
     <img src="https://image.tmdb.org/t/p/original/1aHnP8oed54UMLEvTlY7VBl069q.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
