--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La vieja guardia 2 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los salvajes -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula917.html">
+    <img src="https://m.media-amazon.com/images/M/MV5BYjI2NmE0ZGMtNDczYi00MWI5LTk2NjgtY2U2MTIwNTBkYWY5XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Los salvajes" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los salvajes</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- La vieja guardia 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula916.html">
     <img src="https://image.tmdb.org/t/p/original/6eGyuK8bHMAB34AIIQOL3wZw8sn.jpg" alt="La vieja guardia 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
