--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Infiltrada en el bunker -->
+<li>
+  <a href="../Peliculas/pelicula918.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1hmZfIhKl84b4z40Vl9F06p4eWd.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Infiltrada en el búnker 2025</span>
+    <span class="hidden"></span>
+  </a>
+</li>
+<!--FIN-->
 	  <!-- Los salvajes -->
 <li>
   <a href="../Peliculas/pelicula917.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
