--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dora y la Busqueda del Sol Dorado -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¡Viva la vida! -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula920.html">
+    <img src="https://image.tmdb.org/t/p/original/kaHiddZ1XTK7YuSu8Aq8dCtmlKu.jpg" alt="¡Viva la vida!" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">¡Viva la vida!</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Dora y la Busqueda del Sol Dorado -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula915.html">
     <img src="https://image.tmdb.org/t/p/original/sVLSOnGfNXj7VVGBgOz5cNa0lDz.jpg" alt="Dora y la Búsqueda del Sol Dorado" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
